[tool.poetry]
name = "cryptopals"
version = "0.0.1"
description = "Attempt to solve the Cryptopals challenges"
authors = ["Bertrand Bonnefoy-Claudet <bertrand@bertrandbc.com>"]
license = "MIT"

[tool.poetry.dependencies]
cryptography = "^41.0.3"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-repeat = "^0.9.1"
ruff = "^0.0.291"

[tool.ruff]
select = ["ASYNC", "C4", "E", "F", "N", "Q", "RUF", "W"]
line-length = 100

[tool.ruff.isort]
known-first-party = ["cryptopals"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli_level = "INFO"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
