[tool.poetry]
name = "cryptopals"
version = "0.0.1"
description = "Attempt to solve the Cryptopals challenges"
authors = ["Bertrand Bonnefoy-Claudet <bertrand@bertrandbc.com>"]
license = "MIT"

[tool.poetry.dependencies]
cryptography = "^42.0.5"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.2.0"
pytest = "^8.0.2"
pytest-repeat = "^0.9.1"
pytest-xdist = "^3.3.1"
ruff = "^0.2.2"

[tool.ruff]
lint.select = ["ASYNC", "C4", "E", "F", "N", "Q", "RUF", "W"]
line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["cryptopals"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
log_cli_level = "INFO"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
